// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`operatingSystemFilter expect to return results 1`] = `
Array [
  Object {
    "__typename": "Profile",
    "benchmark": Object {
      "title": "Guide to the Secure Configuration of RHEL 7",
      "version": "0.1.49",
    },
    "businessObjective": null,
    "complianceThreshold": 100,
    "compliantHostCount": 4,
    "id": "b71376fd-015e-4209-99af-4543e82e5dc5",
    "majorOsVersion": 7,
    "name": "United States Government Configuration Baseline23",
    "policy": Object {
      "__typename": "Profile",
      "id": "b71376fd-015e-4209-99af-4543e82e5dc5-policy",
      "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 73",
    },
    "refId": "xccdf_org.ssgproject.content_profile_ospp23",
    "totalHostCount": 10,
  },
  Object {
    "__typename": "Profile",
    "benchmark": Object {
      "title": "Guide to the Secure Configuration of RHEL 7",
      "version": "0.1.49",
    },
    "businessObjective": null,
    "complianceThreshold": 67,
    "id": "719999b6-d230-4ba5-8dba-7ab3dc6561e0",
    "majorOsVersion": 7,
    "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 73",
    "refId": "xccdf_org.ssgproject.content_profile_pci-dss3",
    "totalHostCount": 10,
  },
  Object {
    "__typename": "Profile",
    "benchmark": Object {
      "title": "Guide to the Secure Configuration of RHEL 7",
      "version": "0.1.49",
    },
    "businessObjective": null,
    "complianceThreshold": 100,
    "id": "dae0487d-3201-4ee0-af5f-b94cde2af818",
    "majorOsVersion": 7,
    "name": "United States Government Configuration Baseline2",
    "refId": "xccdf_org.ssgproject.content_profile_ospp2",
    "totalHostCount": 10,
  },
  Object {
    "__typename": "Profile",
    "benchmark": Object {
      "title": "Guide to the Secure Configuration of RHEL 7",
      "version": "0.1.49",
    },
    "businessObjective": null,
    "complianceThreshold": 69.5,
    "id": "20a9d997-62a6-40cc-a5f3-19d466eb975e",
    "majorOsVersion": 7,
    "name": "C2S for Red Hat Enterprise Linux 7",
    "refId": "xccdf_org.ssgproject.content_profile_C2S",
    "totalHostCount": 10,
  },
  Object {
    "__typename": "Profile",
    "benchmark": Object {
      "title": "Guide to the Secure Configuration of RHEL 7",
      "version": "0.1.49",
    },
    "businessObjective": null,
    "complianceThreshold": 100,
    "id": "6d345bd2-d597-4df8-9bcf-71c41155b42c",
    "majorOsVersion": 7,
    "name": "Criminal Justice Information Services (CJIS) Security Policy",
    "refId": "xccdf_org.ssgproject.content_profile_cjis",
    "totalHostCount": 10,
  },
  Object {
    "__typename": "Profile",
    "benchmark": Object {
      "title": "Guide to the Secure Configuration of RHEL 7",
      "version": "0.1.49",
    },
    "businessObjective": null,
    "complianceThreshold": 100,
    "id": "c8e15347-9c2b-495d-8e54-503c2f9582b6",
    "majorOsVersion": 7,
    "name": "Unclassified Information in Non-federal Information Systems and Organizations (NIST 800-171)",
    "refId": "xccdf_org.ssgproject.content_profile_nist-800-171-cui",
    "totalHostCount": 10,
  },
  Object {
    "__typename": "Profile",
    "benchmark": Object {
      "title": "Guide to the Secure Configuration of RHEL 7",
      "version": "0.1.49",
    },
    "businessObjective": null,
    "complianceThreshold": 100,
    "id": "3c4823a1-2c16-46ae-b2fe-0cebf5a03931",
    "majorOsVersion": 7,
    "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
    "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
    "totalHostCount": 10,
  },
  Object {
    "__typename": "Profile",
    "benchmark": Object {
      "title": "Guide to the Secure Configuration of RHEL 7",
      "version": "0.1.49",
    },
    "businessObjective": null,
    "complianceThreshold": 100,
    "id": "f7b7977a-403b-4cd1-ab90-20b6f9a5a359",
    "majorOsVersion": 7,
    "name": "Red Hat Corporate Profile for Certified Cloud Providers (RH CCP)",
    "refId": "xccdf_org.ssgproject.content_profile_rht-ccp",
    "totalHostCount": 10,
  },
  Object {
    "__typename": "Profile",
    "benchmark": Object {
      "title": "Guide to the Secure Configuration of RHEL 7",
      "version": "0.1.49",
    },
    "businessObjective": null,
    "complianceThreshold": 100,
    "id": "36abc364-6dc3-4e35-94f4-d10fa77e866e",
    "majorOsVersion": 7,
    "name": "Health Insurance Portability and Accountability Act (HIPAA)",
    "refId": "xccdf_org.ssgproject.content_profile_hipaa",
    "totalHostCount": 10,
  },
  Object {
    "__typename": "Profile",
    "benchmark": Object {
      "title": "Guide to the Secure Configuration of RHEL 7",
      "version": "0.1.49",
    },
    "businessObjective": null,
    "complianceThreshold": 100,
    "id": "d35c8aad-8fc8-49e8-bff0-4d9d3dc8f220",
    "majorOsVersion": 7,
    "name": "United States Government Configuration Baseline",
    "refId": "xccdf_org.ssgproject.content_profile_ospp",
    "totalHostCount": 10,
  },
  Object {
    "__typename": "Profile",
    "benchmark": Object {
      "title": "Guide to the Secure Configuration of RHEL 7",
      "version": "0.1.49",
    },
    "businessObjective": null,
    "complianceThreshold": 100,
    "id": "4c27fe09-9a7f-437c-b38b-e42272d9ccf0",
    "majorOsVersion": 7,
    "name": "Standard System Security Profile for Red Hat Enterprise Linux 7",
    "refId": "xccdf_org.ssgproject.content_profile_standard",
    "totalHostCount": 10,
  },
  Object {
    "__typename": "Profile",
    "benchmark": Object {
      "title": "Guide to the Secure Configuration of RHEL 7",
      "version": "0.1.49",
    },
    "businessObjective": null,
    "complianceThreshold": 100,
    "id": "9b034440-e3dd-4c19-8f2c-ca75e813d57d",
    "majorOsVersion": 7,
    "name": "DISA STIG for Red Hat Enterprise Linux 7",
    "refId": "xccdf_org.ssgproject.content_profile_stig-rhel7-disa",
    "totalHostCount": 10,
  },
  Object {
    "__typename": "Profile",
    "benchmark": Object {
      "title": "Guide to the Secure Configuration of RHEL 7",
      "version": "0.1.49",
    },
    "businessObjective": null,
    "complianceThreshold": 100,
    "id": "19921ca4-8526-4651-8876-3c8587e8e125",
    "majorOsVersion": 7,
    "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 72",
    "refId": "xccdf_org.ssgproject.content_profile_pci-dss2",
    "totalHostCount": 10,
  },
]
`;

exports[`policyComplianceFilter expect to return results 1`] = `
Array [
  Object {
    "__typename": "Profile",
    "benchmark": Object {
      "title": "Guide to the Secure Configuration of RHEL 7",
      "version": "0.1.49",
    },
    "businessObjective": null,
    "complianceThreshold": 100,
    "compliantHostCount": 4,
    "id": "b71376fd-015e-4209-99af-4543e82e5dc5",
    "majorOsVersion": 7,
    "name": "United States Government Configuration Baseline23",
    "policy": Object {
      "__typename": "Profile",
      "id": "b71376fd-015e-4209-99af-4543e82e5dc5-policy",
      "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 73",
    },
    "refId": "xccdf_org.ssgproject.content_profile_ospp23",
    "totalHostCount": 10,
  },
]
`;

exports[`policyNameFilter expect to return results 1`] = `
Array [
  Object {
    "__typename": "Profile",
    "benchmark": Object {
      "title": "Guide to the Secure Configuration of RHEL 7",
      "version": "0.1.49",
    },
    "businessObjective": null,
    "complianceThreshold": 100,
    "id": "c8e15347-9c2b-495d-8e54-503c2f9582b6",
    "majorOsVersion": 7,
    "name": "Unclassified Information in Non-federal Information Systems and Organizations (NIST 800-171)",
    "refId": "xccdf_org.ssgproject.content_profile_nist-800-171-cui",
    "totalHostCount": 10,
  },
]
`;

exports[`policyTypeFilter expect to return results 1`] = `
Array [
  Object {
    "__typename": "Profile",
    "benchmark": Object {
      "title": "Guide to the Secure Configuration of RHEL 7",
      "version": "0.1.49",
    },
    "businessObjective": null,
    "complianceThreshold": 100,
    "compliantHostCount": 4,
    "id": "b71376fd-015e-4209-99af-4543e82e5dc5",
    "majorOsVersion": 7,
    "name": "United States Government Configuration Baseline23",
    "policy": Object {
      "__typename": "Profile",
      "id": "b71376fd-015e-4209-99af-4543e82e5dc5-policy",
      "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 73",
    },
    "refId": "xccdf_org.ssgproject.content_profile_ospp23",
    "totalHostCount": 10,
  },
]
`;
